# pe-parser

./: .gitignore  Cargo.toml  README.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  fuzz.yml  main.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pe-parser.rs
src/: coff.rs  lib.rs  main.rs  optional.rs  pe.rs  prelude.rs  relocation.rs  scribe.rs  section.rs
tests/: pe-parser.rs
