[package]
name = "pe-parser"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Isaac Marovitz <isaacmarovitz@gmail.com>"]
description = "A blazing fast PE Parser with pretty print"
readme = "README.md"
repository = "https://github.com/IsaacMarovitz/pe-parser"
keywords = ["parser", "cli", "windows", "binary"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["clap"]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
num-traits = { version = "0.2.17", default-features = false }
num-derive = "0.4.1"
bitflags = { version = "2.4.1", default-features = false }
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.4.8", features = ["cargo"], optional = true }

[dev-dependencies]
datatest-stable = "0.2.3"

[[test]]
name = "pe-parser"
harness = false
