[package]
name = "pe-parser"
version = "0.5.1"
edition = "2021"
license = "MIT"
authors = ["Isaac Marovitz <isaacmarovitz@gmail.com>"]
description = "A blazing fast PE Parser with pretty print"
readme = "README.md"
repository = "https://github.com/IsaacMarovitz/pe-parser"
keywords = ["parser", "cli", "windows", "binary"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["clap"]

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
num-traits = { version = "0.2.19", default-features = false }
num-derive = "0.4.2"
bitflags = { version = "2.5.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.4", features = ["cargo"], optional = true }

[dev-dependencies]
datatest-stable = "0.2.9"

[[test]]
name = "pe-parser"
harness = false
