[package]
name = "pe-parser"
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Isaac Marovitz <isaacmarovitz@gmail.com>"]
description = "A blazing fast PE Parser with pretty print"
readme = "README.md"
repository = "https://github.com/IsaacMarovitz/pe-parser"
keywords = ["parser", "cli", "windows", "binary"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "chrono"]
std = ["clap"]
chrono = ["dep:chrono"]

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
num-traits = { version = "0.2.19", default-features = false }
num-derive = "0.4.2"
bitflags = { version = "2.9.0", default-features = false }
chrono = { version = "0.4.40", default-features = false, optional = true }
clap = { version = "4.5.32", features = ["cargo"], optional = true }

[dev-dependencies]
datatest-stable = "0.3.2"

[[test]]
name = "pe-parser"
harness = false
