[package]
name = "pe-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"

[dependencies.pe-parser]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "pe-parser"
path = "fuzz_targets/pe-parser.rs"
test = false
doc = false
